--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-OPENAI_API_KEY=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
+OPENAI_API_KEY
